# Excel-To-Paver

./: 2012 - Copy.xlsx  2012.xlsx  2012xlsb.xlsx  4405.xml  Plain Data.xlsx  PlainDataSheet Deleted Rows.xlsx  PlainDataSheet.xlsx  ShortTest.xlsx  ShortyTest.xlsx  inputStart.py  inspectionClasses.py  main.py  mapping.py  pyproject.toml  scratchXml.py  test.xml
XML/: 2010.xml
